# shift-arrangement-web

./: README.md  main.py
backend/: .env  main.py  pyproject.toml
backend/app/: config.py  docLangchain.ipynb  langchain.ipynb  main.py  testLangchain.ipynb  testLangchain.py  testing.ipynb
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: CNNGrid.tsx  CNNNumber.tsx  COMP.tsx  COMPFloat.tsx  COMPGrid.tsx  Calculator.tsx  Comp2Field.tsx  DDPG.tsx  Math.ts  Navbar.tsx  SmartRVE.tsx
