[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "^0.103.1"}
pillow = "^10.0.0"
pandas = "^2.1.0"
uvicorn = "^0.24.0.post1"
openai = "^1.3.5"
python-dotenv = "^1.0.0"
langchain = "^0.0.340"
wikipedia = "^1.4.0"
numexpr = "^2.8.7"
chromadb = "^0.4.18"
openpyxl = "^3.1.2"
config = "^0.5.1"
nltk = "^3.8.1"
unstructured = {extras = ["pdf"], version = "^0.11.2"}
networkx = "^3.2.1"
tiktoken = "^0.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
